<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:src="@drawable/header"
		android:layout_gravity="top"
		android:contentDescription="@string/splash_screen"
		android:layout_weight="0.5"
        />
    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
         <ImageView 
        android:id="@+id/announcements"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/announcements"
		android:contentDescription="@string/splash_screen"
		android:layout_weight="1"
        />
    
        <ImageView 
        android:id="@+id/schedule"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/schedule"
		android:contentDescription="@string/schedule"
		android:layout_weight="1"
        />
        
        <ImageView 
        android:id="@+id/strikes"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/strikes"
		android:contentDescription="@string/strikes"
		android:layout_weight="1"
        />
        
    </LinearLayout>
   <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
        
        <ImageView 
        android:id="@+id/eclass"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/eclass"
		android:contentDescription="@string/eclass"
		android:layout_weight="1"
        />
        
        <ImageView 
        android:id="@+id/grades"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/grades"
		android:contentDescription="@string/grades"
		android:layout_weight="1"
        />
        
        <ImageView 
        android:id="@+id/secretary"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/secretary"
		android:contentDescription="@string/secretary"
		android:layout_weight="1"
        />
        </LinearLayout>
         <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.5"
        >
       	<ImageView 
        android:id="@+id/map"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/map"
		android:contentDescription="@string/map"
		android:layout_weight="1"
        />
       	
       	<ImageView 
        android:id="@+id/access"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/access"
		android:contentDescription="@string/access"
		android:layout_weight="1"
        />
       	
       	<ImageView 
        android:id="@+id/news"
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/news"
		android:contentDescription="@string/news"
		android:layout_weight="1"
        />
    	</LinearLayout>
    </LinearLayout>